added basic vec class and tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,17 +8,4 @@ add_library(catch_main catch_main.cpp)
 target_link_libraries(catch_main PUBLIC CONAN_PKG::catch2)
 target_link_libraries(catch_main PRIVATE project_options)
 
-add_executable(tests tests.cpp)
-target_link_libraries(tests PRIVATE project_options project_warnings catch_main)
-
-catch_discover_tests(
-    tests
-    TEST_PREFIX
-    "unittests."
-    WORKING_DIRECTORY
-    "${CMAKE_SOURCE_DIR}"
-    EXTRA_ARGS
-    -s
-    --reporter=xml
-    --out=test.xml
-)
+add_subdirectory(math)
