--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_executable(pathtracer main.cpp)
-target_link_libraries(pathtracer PRIVATE project_options project_warnings)
+target_link_libraries(pathtracer PRIVATE math project_options project_warnings)
+
+add_subdirectory(math)
