added ray class with tests

--- a/src/math/CMakeLists.txt
+++ b/src/math/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(SOURCES Vec3.cpp)
+set(SOURCES Vec3.cpp Ray.cpp)
 
-set(HEADERS Vec3.h)
+set(HEADERS Vec3.h Ray.h)
 
 add_library(math OBJECT ${SOURCES} ${HEADERS})
 target_link_libraries(math PRIVATE project_options project_warnings)
