--- a/src/math/CMakeLists.txt
+++ b/src/math/CMakeLists.txt
@@ -1,7 +1,6 @@
-set(SOURCES Vec3.cpp Ray.cpp)
+set(SOURCES Vec3.cpp Ray.cpp Hit.cpp Sphere.cpp)
+set(HEADERS Vec3.h Ray.h Hit.h Sphere.h)
 
-set(HEADERS Vec3.h Ray.h)
-
-add_library(math ${SOURCES} ${HEADERS})
+add_library(math OBJECT ${SOURCES} ${HEADERS})
 target_link_libraries(math PRIVATE project_options project_warnings)
 target_include_directories(math INTERFACE ../)
